--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Opu-Nembe Youth Computer Training - Art student</title>
+    <title>Opu-Nembe Youth Computer Training - Batch A Assessment</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,7 +53,7 @@
 <body>
 
     <div id="name-section">
-        <h1>Welcome to Opu-Nembe Youth Computer Training - Art JAMB PRACTICE</h1>
+        <h1>Welcome to Opu-Nembe Youth Computer Training - Batch A Assessment</h1>
         <p><strong>Instructions:</strong> This is a timed test. Ensure you select the correct answer for each question. Good luck!</p>
         <input type="text" id="first-name" placeholder="Enter First Name" required>
         <input type="text" id="surname" placeholder="Enter Surname" required>
